[package]
name = "brace-expansion"
version = "0.1.1"
edition = "2021"
rust-version = "1.74"
description = "Bash-style brace expansion: a{b,c}d -> [abd, acd], {1..3} -> [1,2,3]. A faithful port of the brace-expansion npm package. Zero dependencies."
documentation = "https://docs.rs/brace-expansion"
repository = "https://github.com/trananhtung/brace-expansion"
homepage = "https://github.com/trananhtung/brace-expansion"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["brace", "expansion", "glob", "bash", "shell"]
categories = ["parser-implementations", "text-processing", "no-std"]
authors = ["trananhtung"]
exclude = ["/.github", "/.gitignore"]

[dependencies]

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"

